@@ -377,6 +377,7 @@ Paul ten Hagen
 Rasmus Hahn
 Peter Haight
 Václav Haisman
+Zbigniew Halas
 Bob Halley
 Jesse Hallio
 Jun Hamano
